--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <br/>
-        <h3>Yalla Kora</h3>
+        <h3>Yalla Kora Matches</h3>
         <br/>
         <hr/>
         <br/>
